--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "learning": "file:",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
+    "toastr": "^2.1.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
