--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "flatpickr": "^4.6.13",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
